Add create button in calendar list page to navigate to create calendar page #117

--- a/src/Ezac.Roster.Web/Components/Components/CalendarList.razor
+++ b/src/Ezac.Roster.Web/Components/Components/CalendarList.razor
@@ -11,6 +11,7 @@
 
 <h3>CalendarList</h3>
 
+<button class="btn btn-primary" @onclick="CreateCalendar">Create New Calendar</button>
 
 @if (calendars != null)
 {
