Update button text to Dutch for 'Create New Calendar' button in calendar list page #117

--- a/src/Ezac.Roster.Web/Components/Components/CalendarList.razor
+++ b/src/Ezac.Roster.Web/Components/Components/CalendarList.razor
@@ -11,7 +11,8 @@
 
 <h3>CalendarList</h3>
 
-<button class="btn btn-primary" @onclick="CreateCalendar">Create New Calendar</button>
+<button class="btn btn-primary" @onclick="CreateCalendar">Maak een nieuwe kalender</button>
+
 
 @if (calendars != null)
 {
