Update button text to Dutch for 'Update' button in calendar list page #117

--- a/src/Ezac.Roster.Web/Components/Components/CalendarList.razor
+++ b/src/Ezac.Roster.Web/Components/Components/CalendarList.razor
@@ -31,7 +31,7 @@
                     <td>@calendar.Name</td>
                     <td>@calendar.Start @calendar.End</td>
                     <td>
-                        <button class="btn btn-warning btn-sm" @onclick="() => UpdateCalendar(calendar.Id)">Update</button>
+                        <button class="btn btn-warning btn-sm" @onclick="() => UpdateCalendar(calendar.Id)">bewerken</button>
                         <button class="btn btn-danger btn-sm" @onclick="() => DeleteCalendar(calendar.Id)">Delete</button>
                     </td>
                 </tr>
