Update button text to Dutch for 'Delete' button in calendar list page #117

--- a/src/Ezac.Roster.Web/Components/Components/CalendarList.razor
+++ b/src/Ezac.Roster.Web/Components/Components/CalendarList.razor
@@ -32,7 +32,7 @@
                     <td>@calendar.Start @calendar.End</td>
                     <td>
                         <button class="btn btn-warning btn-sm" @onclick="() => UpdateCalendar(calendar.Id)">bewerken</button>
-                        <button class="btn btn-danger btn-sm" @onclick="() => DeleteCalendar(calendar.Id)">Delete</button>
+                        <button class="btn btn-danger btn-sm" @onclick="() => DeleteCalendar(calendar.Id)">Verwijderen</button>
                     </td>
                 </tr>
             }
