Add overview calendar method in calendar list page to navigate to calendar overview #117

--- a/src/Ezac.Roster.Web/Components/Components/CalendarList.razor
+++ b/src/Ezac.Roster.Web/Components/Components/CalendarList.razor
@@ -68,4 +68,14 @@
     {
         Navigation.NavigateTo("calendarcreate");
     }
+
+    private void OverviewCalendar(Guid calendarId)
+    {
+        Navigation.NavigateTo($"calendar/{calendarId}");
+    }
+
+    private void OverviewCalendar(Guid calendarId)
+    {
+        Navigation.NavigateTo($"calendardetail/{calendarId}");
+    }
 }
