Remove about header

--- a/src/Ezac.Roster.Web/Components/Pages/Calendar.razor
+++ b/src/Ezac.Roster.Web/Components/Pages/Calendar.razor
@@ -166,4 +166,9 @@ else
             periodNames = dayPeriods.Value.Select(p => p.Name).Distinct().OrderBy(name => name).ToList();
         }
     }
+
+    private async Task Login()
+    {
+        
+    }
 }
