--- a/src/Ezac.Roster.Web/Components/Pages/Home.razor
+++ b/src/Ezac.Roster.Web/Components/Pages/Home.razor
@@ -1,7 +1,7 @@
 ﻿@page "/"
 
-<PageTitle>Home</PageTitle>
+<PageTitle>Login</PageTitle>
 
-<h1>Hello, world!</h1>
+<h1>EZAC Planner Login</h1>
 
-Welcome to your new app.
+
