--- a/src/Ezac.Roster.Web/Components/Components/CalendarList.razor
+++ b/src/Ezac.Roster.Web/Components/Components/CalendarList.razor
@@ -72,6 +72,6 @@
 
     private void OverviewCalendar(Guid calendarId)
     {
-        Navigation.NavigateTo($"calendar/{calendarId}");
+        Navigation.NavigateTo($"calendardetails/{calendarId}");
     }
 }
