Enhance calendar list page with error handling #117

--- a/src/Ezac.Roster.Web/Components/Components/CalendarList.razor
+++ b/src/Ezac.Roster.Web/Components/Components/CalendarList.razor
@@ -41,6 +41,11 @@
     </table>
 }
 
+else
+{
+    <p>Geen kalenders gevonden.</p>
+}
+
 
 @code {
     private List<ApplicationCalendar> calendars;
