--- a/src/Ezac.Roster.Web/Components/Pages/Home.razor
+++ b/src/Ezac.Roster.Web/Components/Pages/Home.razor
@@ -1,5 +1,12 @@
 ﻿@page "/"
 
+@using MudBlazor
+@using Ezac.Roster.Domain.Interfaces.Services
+
+@inject NavigationManager NavigationManager
+@inject IUserService UserService
+
+
 <style>
     .h1 {
         text-align: center;
@@ -33,10 +40,15 @@
 
         private string UserName { get; set; }
         private string Password { get; set; }
+        private bool IsLoggedIn { get; set; }
 
         private async Task Login()
         {
-           
+
+            if (UserName == "test" && Password == "Test123!")
+            {
+                NavigationManager.NavigateTo("calendar");
+            }
         }
     }
 
