--- a/src/Ezac.Roster.Web/Components/Components/DateItem.razor
+++ b/src/Ezac.Roster.Web/Components/Components/DateItem.razor
@@ -3,14 +3,23 @@
 
 <li>
 	<div class="date-item">
-		<div class="date-item__date">
-			<span>@day.Name: @day.Date</span>
-			<span>x button</span>
+		<div class="date-item-content">
+			<span>@day.Name: @day.Date.Date.ToString("dd/MM/yyyy")</span>
+			<button @onclick="CloseDay">X</button>
 		</div>
 	</div>
 </li>
 
 @code {
-	[Parameter]
-	public Day day { get; set; }
+    [Parameter]
+    public Day day { get; set; }
+
+    [Parameter]
+    public Action<Day> RemoveDay { get; set; }
+
+    private void CloseDay()
+    {
+        day.IsOpen = false;
+        RemoveDay(day);
+    }
 }
