--- a/src/Ezac.Roster.Web/Components/App.razor
+++ b/src/Ezac.Roster.Web/Components/App.razor
@@ -12,6 +12,7 @@
     <link rel="icon" type="image/png" href="favicon.png" />
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
     <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
+    <script src="/js/calendars.js" defer></script>
     <HeadOutlet />
 </head>
 
