--- a/src/Ezac.Roster.Web/Components/Pages/CalendarList.razor
+++ b/src/Ezac.Roster.Web/Components/Pages/CalendarList.razor
@@ -3,6 +3,7 @@
 @using Ezac.Roster.Domain.Models
 @using Ezac.Roster.Domain.Interfaces.Services
 @using Ezac.Roster.Domain.Entities
+@using Ezac.Roster.Web.Components.Components
 @rendermode InteractiveServer
 
 
@@ -13,6 +14,7 @@
 
 <button class="btn btn-primary" @onclick="CreateCalendar">Maak een nieuwe kalender</button>
 
+<ConfirmDeletePopUp @ref="DeletePopUp" />
 
 @if (calendars != null)
 {
@@ -50,6 +52,8 @@ else
 @code {
     private List<ApplicationCalendar> calendars;
 
+    private ConfirmDeletePopUp DeletePopUp;
+
     protected override async Task OnInitializedAsync()
     {
         var calendarResult = await CalendarService.GetAllAsync();
@@ -65,9 +69,9 @@ else
         Navigation.NavigateTo($"calendarupdate/{calendarId}");
     }
 
-    private void DeleteCalendar(Guid calendarId)
+    private async Task DeleteCalendar(Guid calendarId)
     {
-        Navigation.NavigateTo($"calendardelete/{calendarId}");
+        await DeletePopUp.Show();
     }
 
     private void CreateCalendar()
