--- a/src/Ezac.Roster.Web/Components/Components/ConfirmDeletePopUp.razor
+++ b/src/Ezac.Roster.Web/Components/Components/ConfirmDeletePopUp.razor
@@ -1,5 +1,7 @@
 ﻿@rendermode InteractiveServer
 
+@using Ezac.Roster.Domain.Interfaces.Services
+
 @inject IJSRuntime JSRuntime
 
 <dialog @ref="dialog">
@@ -12,11 +14,11 @@
 				</button>
 			</div>
 			<div class="modal-body">
-				<p>Are you sure you want to delete this record?</p>
+				<p>Bent u zeker dat u deze kalender wilt verwijderen?</p>
 			</div>
 			<div class="modal-footer">
-				<button type="button" class="btn btn-secondary" @onclick="CloseDialog">Cancel</button>
-				<button type="button" class="btn btn-danger" @onclick="DeleteRecord">Delete</button>
+				<button type="button" class="btn btn-secondary" @onclick="CloseDialog">Annuleren</button>
+				<button type="button" class="btn btn-danger" @onclick="DeleteCalendar">Verwijderen</button>
 			</div>
 		</div>
 	</div>
@@ -25,8 +27,14 @@
 @code {
 	private ElementReference dialog;
 
-	public async Task Show()
+	private Guid calendarId;
+
+	[Parameter]
+	public Func<Guid, Task> deleteCalendar { get; set; }
+
+	public async Task Show(Guid calendarId)
 	{
+		this.calendarId = calendarId;
 		await JSRuntime.InvokeVoidAsync("openDialog", dialog);
 	}
 
@@ -35,8 +43,9 @@
 		await JSRuntime.InvokeVoidAsync("closeDialog", dialog);
 	}
 
-	private void DeleteRecord()
+	private async Task DeleteCalendar()
 	{
-		
+		await deleteCalendar(calendarId);
+		await CloseDialog();
 	}
 }
