--- a/src/Ezac.Roster.Web/Components/Pages/CalendarList.razor
+++ b/src/Ezac.Roster.Web/Components/Pages/CalendarList.razor
@@ -14,7 +14,7 @@
 
 <button class="btn btn-primary" @onclick="CreateCalendar">Maak een nieuwe kalender</button>
 
-<ConfirmDeletePopUp @ref="DeletePopUp" />
+<ConfirmDeletePopUp @ref="DeletePopUp" deleteCalendar="@DeleteCalendar" />
 
 @if (calendars != null)
 {
@@ -34,7 +34,7 @@
                     <td>@calendar.Start.ToString("yyyy/MM") tot @calendar.End.ToString("yyyy/MM")</td>
                     <td>
                         <button class="btn btn-warning btn-sm" @onclick="() => UpdateCalendar(calendar.Id)">bewerken</button>
-                        <button class="btn btn-danger btn-sm" @onclick="() => DeleteCalendar(calendar.Id)">Verwijderen</button>
+                        <button class="btn btn-danger btn-sm" @onclick="() => ShowDeletePopUp(calendar.Id)">Verwijderen</button>
                         <button class="btn btn-info btn-sm" @onclick="() => OverviewCalendar(calendar.Id)">Overzicht</button>
                     </td>
                 </tr>
@@ -69,9 +69,20 @@ else
         Navigation.NavigateTo($"calendarupdate/{calendarId}");
     }
 
+    private async Task ShowDeletePopUp(Guid calendarId)
+    {
+        await DeletePopUp.Show(calendarId);
+    }
+
     private async Task DeleteCalendar(Guid calendarId)
     {
-        await DeletePopUp.Show();
+        await CalendarService.DeleteAsync(calendarId);
+        var calendarResult = await CalendarService.GetAllAsync();
+
+        if (calendarResult.IsSucces)
+        {
+            calendars = calendarResult.Value.ToList();
+        }
     }
 
     private void CreateCalendar()
