--- a/src/Ezac.Roster.Web/Components/Pages/CalendarCreator.razor
+++ b/src/Ezac.Roster.Web/Components/Pages/CalendarCreator.razor
@@ -7,6 +7,7 @@
 @using Ezac.Roster.Domain.Services.Models
 
 @inject ICalendarService CalendarService
+@inject NavigationManager NavigationManager
 
 <div id="calendar-creator">
     <form @onsubmit="CreateCalendar">
@@ -29,7 +30,7 @@
                 <button type="button" class="btn btn-primary" @onclick="AddExtraDay">Voeg toe</button>
             </div>
         </div>
-        <button type="submit" class="btn btn-primary">Creeer kalender</button>
+        <button type="submit" class="btn btn-primary" disabled="@addingCalendar">Creeer kalender</button>
     </form>
 
     <div>
@@ -50,6 +51,7 @@
     private ApplicationCalendar _calendar { get; set; }
 
     private DateTime dateToAdd { get; set; }
+    private bool addingCalendar = false;
 
     protected override void OnInitialized()
     {
@@ -123,6 +125,9 @@
 			Days = _calendar.Days
 		};
 
+        addingCalendar = true;
+
         await CalendarService.AddAsync(calendarCreateRequestModel);
+        NavigationManager.NavigateTo("calendarslist");
     }
 }
