--- a/src/Ezac.Roster.Web/Components/Pages/CalendarList.razor
+++ b/src/Ezac.Roster.Web/Components/Pages/CalendarList.razor
@@ -83,6 +83,7 @@ else
         {
             calendars = calendarResult.Value.ToList();
         }
+        StateHasChanged();
     }
 
     private void CreateCalendar()
