--- a/src/Ezac.Roster.Web/Components/Pages/CalendarCreatorPage.razor
+++ b/src/Ezac.Roster.Web/Components/Pages/CalendarCreatorPage.razor
@@ -72,8 +72,15 @@
 
     private void RemoveClosedDay(Day closedDay)
     {
-        _calendar.Days.Remove(closedDay);
-        StateHasChanged();
+        var dayToRemove = _calendar.Days.FirstOrDefault(day => day.Equals(closedDay));
+        if (dayToRemove != null)
+        {
+            _calendar.Days.Remove(dayToRemove);
+            closedDay.IsOpen = false;
+            _calendar.Days.Add(closedDay);
+            _calendar.Days = _calendar.Days.OrderBy(d => d.Date).ToList();
+            StateHasChanged();
+        }
     }
 
     private void AddExtraDay(DateTime dateToAdd)
