--- a/src/Ezac.Roster.Web/Components/Pages/CalendarCreatorPage.razor
+++ b/src/Ezac.Roster.Web/Components/Pages/CalendarCreatorPage.razor
@@ -88,7 +88,7 @@
 
     private void AddExtraDay(DateTime dateToAdd)
     {
-        if (_calendar.Days.Any(d => d.Date == dateToAdd))
+        if (_calendar.Days.Any(d => d.Date == dateToAdd) || dateToAdd < _calendar.Start || dateToAdd > _calendar.End)
         {
             return;
         }
