Add better text to buttons in form #119

--- a/src/Ezac.Roster.Web/Components/Components/CalendarForm.razor
+++ b/src/Ezac.Roster.Web/Components/Components/CalendarForm.razor
@@ -20,7 +20,7 @@
             <button type="button" class="btn btn-primary" @onclick="(e) => HandleClick(e)">Voeg toe</button>
         </div>
     </div>
-    <button type="submit" class="btn btn-primary">Creeer kalender</button>
+    <button type="submit" class="btn btn-primary">Bewerk kalender</button>
 </form>
 
 @code {
