--- a/src/Ezac.Roster.Web/Components/Pages/CalendarList.razor
+++ b/src/Ezac.Roster.Web/Components/Pages/CalendarList.razor
@@ -10,7 +10,7 @@
 @inject ICalendarService CalendarService
 @inject NavigationManager Navigation
 
-<h3>CalendarList</h3>
+<h3>Alle kalenders</h3>
 
 <button class="btn btn-primary" @onclick="CreateCalendar">Maak een nieuwe kalender</button>
 
@@ -93,6 +93,6 @@ else
 
     private void OverviewCalendar(Guid calendarId)
     {
-        Navigation.NavigateTo($"calendardetails/{calendarId}");
+        Navigation.NavigateTo($"calendar/{calendarId}");
     }
 }
