Add default dayperiods to new calendars #119

--- a/src/Ezac.Roster.Web/Components/Components/CalendarOverview.razor
+++ b/src/Ezac.Roster.Web/Components/Components/CalendarOverview.razor
@@ -46,15 +46,69 @@
             if (!Calendar.Days.Any(d => d.Date == day))
             {
                 Calendar.Days.Add(new Day()
+                {
+                    Id = Guid.NewGuid(),
+                    Date = day,
+                    IsOpen = day.DayOfWeek == DayOfWeek.Saturday || day.DayOfWeek == DayOfWeek.Sunday,
+                    Name = day.DayOfWeek.ToString(),
+                    CalendarId = Calendar.Id,
+                    DayPeriods = new List<DayPeriod>()
+                });
+            }
+        }
+
+        foreach (var date in Calendar.Days)
+        {
+            if (date.IsOpen && date.DayPeriods.Count == 0)
+            {
+                date.DayPeriods = new List<DayPeriod>()
+                {
+                    new DayPeriod
                     {
                         Id = Guid.NewGuid(),
-                        Date = day,
-                        IsOpen = day.DayOfWeek == DayOfWeek.Saturday || day.DayOfWeek == DayOfWeek.Sunday,
-                        Name = day.DayOfWeek.ToString(),
-                        CalendarId = Calendar.Id
-                    });
+                        DayId = date.Id,
+                        Start = DateTime.Parse("08:30"),
+                        End = DateTime.Parse("13:00"),
+                        Name = "A",
+                        Jobs = new List<Job>(),
+                        Preferences = new List<Preference>()
+                    },
+                    new DayPeriod
+					{
+						Id = Guid.NewGuid(),
+						DayId = date.Id,
+						Start = DateTime.Parse("13:00"),
+						End = DateTime.Parse("17:30"),
+						Name = "B",
+						Jobs = new List<Job>(),
+						Preferences = new List<Preference>()
+					},
+                    new DayPeriod
+                    {
+                        Id = Guid.NewGuid(),
+						DayId = date.Id,
+						Start = DateTime.Parse("17:30"),
+						End = DateTime.Parse("23:00"),
+						Name = "C",
+						Jobs = new List<Job>(),
+						Preferences = new List<Preference>()
+                    }
+                };
+                foreach (var period in date.DayPeriods)
+				{
+					if (period.Name == "A" || period.Name == "B")
+					{
+						period.Jobs = new Job[] { new Job { Name = "Lierist" },
+								   new Job { Name = "Startofficier" },
+								   new Job { Name = "Instructeur" },
+								   new Job { Name = "Instructeur (DDI)"} };
+					}
+					else if (period.Name == "C")
+					{
+						period.Jobs = new Job[] { new Job { Name = "Bardienst" } };
+					}
+				}
             }
-
         }
         Calendar.Days = Calendar.Days.Where(d => d.Date >= Calendar.Start && d.Date <= Calendar.End).OrderBy(d => d.Date).ToList();
     }
@@ -76,6 +130,8 @@
         var dayToRemove = Calendar.Days.FirstOrDefault(day => day.Equals(closedDay));
         if (dayToRemove != null)
         {
+            dayToRemove.DayPeriods.Clear();
+            closedDay.DayPeriods.Clear();
             Calendar.Days.Remove(dayToRemove);
             closedDay.IsOpen = false;
             Calendar.Days.Add(closedDay);
@@ -91,13 +147,13 @@
             return;
         }
         Calendar.Days.Add(new Day()
-            {
-                Id = Guid.NewGuid(),
-                Date = dateToAdd,
-                IsOpen = true,
-                Name = dateToAdd.DayOfWeek.ToString(),
-                CalendarId = Calendar.Id
-            });
+        {
+            Id = Guid.NewGuid(),
+            Date = dateToAdd,
+            IsOpen = true,
+            Name = dateToAdd.DayOfWeek.ToString(),
+            CalendarId = Calendar.Id
+        });
         Calendar.Days = Calendar.Days.OrderBy(d => d.Date).ToList();
         StateHasChanged();
     }
