--- a/src/Ezac.Roster.Web/Components/_Imports.razor
+++ b/src/Ezac.Roster.Web/Components/_Imports.razor
@@ -9,3 +9,4 @@
 @using Ezac.Roster.Web
 @using Ezac.Roster.Web.Components
 @using MudBlazor
+@*@using Microsoft.AspNetCore.Components.Server.ProtectedBrowserStorage*@
