--- a/src/Ezac.Roster.Web/Components/Layout/NavMenu.razor
+++ b/src/Ezac.Roster.Web/Components/Layout/NavMenu.razor
@@ -1,30 +1,54 @@
-﻿<div class="top-row ps-3 navbar navbar-dark">
+﻿@using Microsoft.AspNetCore.Components.Server.ProtectedBrowserStorage
+@inject ProtectedLocalStorage ProtectedLocalStore
+
+<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">Ezac.Roster.Web</a>
+        <a class="navbar-brand" href="">Ezac Roosterplanner</a>
     </div>
 </div>
 
 <input type="checkbox" title="Navigation menu" class="navbar-toggler" />
-
 <div class="nav-scrollable" onclick="document.querySelector('.navbar-toggler').click()">
     <nav class="flex-column">
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Login
-            </NavLink>
-        </div>
+        @if (!IsAdminLoggedIn)
+        {
+            <div class="nav-item px-3">
+                <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
+                    <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Login
+                </NavLink>
+            </div>
+        }
+        else
+        {
 
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="excelTest">
                 <span class="bi bi-cloud-upload-fill-nav-menu" aria-hidden="true"></span> Import users
             </NavLink>
         </div>
-
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="calendar">
                 <span class="bi bi-calendar-nav-menu" aria-hidden="true"></span> Kalender
             </NavLink>
         </div>
+        }
     </nav>
 </div>
+
+@code{
+    public bool IsAdminLoggedIn = false;
+
+    protected async Task OnAfterRenderAsync()
+    {
+        var result = await ProtectedLocalStore.GetAsync<bool>("IsLoggedIn");
+        if (result.Success)
+        {
+            IsAdminLoggedIn = result.Value;
+
+        }
+    }
+
+}
+
+
 
