Put pop up in the middle of the screen #119

--- a/src/Ezac.Roster.Web/wwwroot/calendar-creator.css
+++ b/src/Ezac.Roster.Web/wwwroot/calendar-creator.css
@@ -23,3 +23,11 @@ form {
     border-radius: 50%;
     border: solid 1px red;
 }
+
+.popUp {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 10;
+}
