--- a/src/Ezac.Roster.Web/Components/Components/ConfirmDeletePopUp.razor
+++ b/src/Ezac.Roster.Web/Components/Components/ConfirmDeletePopUp.razor
@@ -4,7 +4,7 @@
 
 @inject IJSRuntime JSRuntime
 
-<dialog @ref="dialog">
+<dialog @ref="dialog" class="popUp">
 	<div class="modal-dialog">
 		<div class="modal-content">
 			<div class="modal-header">
