--- a/src/Ezac.Roster.Web/Components/Layout/NavMenu.razor
+++ b/src/Ezac.Roster.Web/Components/Layout/NavMenu.razor
@@ -10,7 +10,7 @@
 <input type="checkbox" title="Navigation menu" class="navbar-toggler" />
 <div class="nav-scrollable" onclick="document.querySelector('.navbar-toggler').click()">
     <nav class="flex-column">
-        @if (!IsAdminLoggedIn)
+        @if (!IsLoggedIn)
         {
             <div class="nav-item px-3">
                 <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
@@ -21,30 +21,30 @@
         else
         {
 
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="excelTest">
-                <span class="bi bi-cloud-upload-fill-nav-menu" aria-hidden="true"></span> Import users
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="calendar">
-                <span class="bi bi-calendar-nav-menu" aria-hidden="true"></span> Kalender
-            </NavLink>
-        </div>
+            <div class="nav-item px-3">
+                <NavLink class="nav-link" href="excelTest">
+                    <span class="bi bi-cloud-upload-fill-nav-menu" aria-hidden="true"></span> Import users
+                </NavLink>
+            </div>
+            <div class="nav-item px-3">
+                <NavLink class="nav-link" href="calendar">
+                    <span class="bi bi-calendar-nav-menu" aria-hidden="true"></span> Kalender
+                </NavLink>
+            </div>
         }
     </nav>
 </div>
 
 @code{
-    public bool IsAdminLoggedIn = false;
+    private bool IsLoggedIn;
 
     protected async Task OnAfterRenderAsync()
     {
         var result = await ProtectedLocalStore.GetAsync<bool>("IsLoggedIn");
         if (result.Success)
         {
-            IsAdminLoggedIn = result.Value;
-
+            IsLoggedIn = true;
+            StateHasChanged();
         }
     }
 
