--- a/src/Ezac.Roster.Web/Components/Layout/NavMenu.razor
+++ b/src/Ezac.Roster.Web/Components/Layout/NavMenu.razor
@@ -1,16 +1,12 @@
-﻿@using Microsoft.AspNetCore.Components.Server.ProtectedBrowserStorage
-@inject ProtectedLocalStorage ProtectedLocalStore
+﻿
+@using Ezac.Roster.Web.Components.Pages
+@inject Ezac.Roster.Domain.Services.LogInBooLService LogInBooLService
 
-<div class="top-row ps-3 navbar navbar-dark">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="">Ezac Roosterplanner</a>
-    </div>
-</div>
 
 <input type="checkbox" title="Navigation menu" class="navbar-toggler" />
 <div class="nav-scrollable" onclick="document.querySelector('.navbar-toggler').click()">
     <nav class="flex-column">
-        @if (!IsLoggedIn)
+        @if (!LogInBooLService.IsLoggedIn)
         {
             <div class="nav-item px-3">
                 <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
@@ -36,17 +32,6 @@
 </div>
 
 @code{
-    private bool IsLoggedIn;
-
-    protected async Task OnAfterRenderAsync()
-    {
-        var result = await ProtectedLocalStore.GetAsync<bool>("IsLoggedIn");
-        if (result.Success)
-        {
-            IsLoggedIn = true;
-            StateHasChanged();
-        }
-    }
 
 }
 
